.025 Added Experience and skills containers

--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
-.img {
-    height: 300px;
+.cont2 {
+    background-color: #CAD4D8;
+}
+
+.experience {
+    background-color: #CAD4D8;
+}
+
+.profile {
+    padding-left: 100px;
 }
